# bami-chassis

./: README.md  main.py  pyproject.toml  requirements.txt
application/exceptions/: base.py  http_exceptions.py  validation_exceptions.py
application/security/: context.py  dependencies.py  permissions.py
domain/exceptions/: domain_exception.py
infrastructure/auth/: exceptions.py  models.py  token_verifier.py
infrastructure/circuit_breaker/: breaker.py  http_client.py
infrastructure/config/: settings.py
infrastructure/database/: repository.py  session.py
infrastructure/kafka/: producer.py
infrastructure/logging/: correlation_id.py  logger.py  request_logging_middleware.py
infrastructure/monitoring/: metrics.py  middleware.py
infrastructure/redis/: client.py
infrastructure/registry/: factory.py  resolver.py
infrastructure/tracing/: tracer.py
interfaces/api/: error_handlers.py  metrics_router.py
interfaces/api/health/: health_router.py
interfaces/api/middlewares/: auth_middleware.py
src/: __init__.py
src/application/exceptions/: http_exceptions.py  validation_exceptions.py
src/application/security/: dependencies.py  permissions.py
src/bami_chassis/: __init__.py
src/infrastructure/auth/: token_verifier.py
src/infrastructure/circuit_breaker/: exceptions.py  http_client.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: session.py
src/infrastructure/kafka/: producer.py
src/infrastructure/logging/: logger.py  request_logging_middleware.py
src/infrastructure/monitoring/: metrics.py  middleware.py
(+35 files in other folders)
