[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bami-chassis"
version = "0.1.0"
description = "Base microservice chassis for Bami services"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Bami Team" }
]

dependencies = [
  "fastapi>=0.124.0",
  "uvicorn>=0.38.0",
  "pydantic-settings>=2.12.0",
  "PyJWT>=2.10.1",
  "prometheus-client>=0.23.1",
  "opentelemetry-sdk>=1.39.0",
  "opentelemetry-exporter-otlp>=1.39.0",
  "opentelemetry-instrumentation-fastapi>=0.60b0",
  "opentelemetry-instrumentation-httpx>=0.60b0",
  "opentelemetry-instrumentation-redis>=0.60b0",
  "sqlalchemy>=2.0.44",
  "redis>=7.1.0",
  "confluent-kafka>=2.12.2",
  "pybreaker>=1.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit"
]

[tool.hatch.build.targets.wheel]
packages = ["src/bami_chassis"]
